--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
                         const [name, price, supply, supplyLeft, description] = row;
                         const coinItem = document.createElement("div");
                         coinItem.className = "card";
-                        let logoSrc = "https://raw.githubusercontent.com/H8notme/crypto/main/la-pum-pum-logo.webp";
+                        let logoSrc = name.includes("Low Taper Fade Coin") 
+                            ? "https://raw.githubusercontent.com/H8notme/crypto/refs/heads/main/DALL%C2%B7E%202025-02-14%2006.10.27%20-%20A%20digital%20coin%20design%20for%20'Low%20Taper%20Fade%20Coin'%20featuring%20a%20stylized%20ninja%20theme.%20The%20coin%20should%20have%20a%20sleek%20black%20and%20silver%20gradient%20to%20represent%20.webp" 
+                            : "https://raw.githubusercontent.com/H8notme/crypto/main/la-pum-pum-logo.webp";
                         coinItem.innerHTML = `${logoSrc ? `<img src='${logoSrc}' class='coin-logo' alt='${name} Logo'>` : ""}
                                                  <h2>${name}</h2>
                                                  <p><strong>Price:</strong> Rs ${price}</p>
@@ -91,4 +93,3 @@
     <div id="coin-list">Loading...</div>
 </body>
 </html>
-
